# quarto-starter

./: README.md  pyproject.toml  test.qmd
latex_pdf_example/: authoring.qmd  references.bib
src/quarto_starter/: __init__.py  test_module.py
